--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.14.5",
+    "astro": "4.16.1",
     "framer-motion": "^11.3.31",
     "prettier": "^3.4.1",
     "prettier-plugin-astro": "^0.14.1",
